# DropboxCleaner

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Run Dropbox Cleaner.cmd  Run Dropbox Cleaner.command  SECURITY.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  __main__.py
app/cli/: main.py
app/dropbox_client/: __init__.py  adapter.py  auth.py  errors.py
app/models/: __init__.py  config.py  events.py  records.py
app/persistence/: __init__.py  repository.py
app/reports/: __init__.py  writers.py
app/services/: __init__.py  copying.py  filtering.py  inventory.py  orchestrator.py  planner.py  runtime.py  verification.py
app/ui/: __init__.py  app.py  folder_browser.py  main.py  options.py  results.py
app/ui/qt/: dialogs.py  main_window.py  screens.py  theme.py  widgets.py  workers.py
app/utils/: atomic.py  config.py  logging.py  paths.py  retry.py  time.py
app/web/: __init__.py  history.py  jobs.py  main.py  models.py  server.py
app/web/static/: index.html
app/web/static/assets/: index-9EY_8ud5.css  index-BeSnM6_o.css  index-BqDy_APZ.js  index-C2uw2fjr.css  index-CHsg-to-.js  index-CdUYHrP9.js
docs/: DROPBOX_APP_SETUP_GUIDE.docx  DROPBOX_APP_SETUP_GUIDE.md  PACKAGING.md
docs/slides/: DropboxCleaner_Open_Source_Overview.pptx  README.md  build_deck.js  export_powerpoint_pngs.py  package-lock.json  package.json
packaging/: DropboxCleaner-macos.spec  DropboxCleaner-windows.spec
scripts/: build_macos.sh  build_windows.ps1  run_macos.sh  run_windows.ps1  start_web.ps1  start_web.sh
tests/: fakes.py  test_integration.py  test_services.py  test_ui_helpers.py  test_web_api.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  validation.test.ts  validation.ts
